
https://docs.netapp.com/us-en/bluexp-classification/task-exclude-scan-paths.html["Scopri di più"].



== 10 gennaio 2024 (versione 1,27)



=== I risultati della pagina di analisi ora visualizzano le dimensioni totali oltre al numero totale di elementi

I risultati filtrati nella pagina di analisi ora mostrano la dimensione totale degli elementi oltre al numero totale di file. Ciò può essere utile quando si spostano file, si eliminano file e altro ancora.



=== Configurare gli ID gruppo aggiuntivi come "aperti all'organizzazione"

Ora puoi configurare gli ID di gruppo in NFS in modo che siano considerati "aperti all'organizzazione" direttamente dalla classificazione BlueXP se il gruppo non era stato inizialmente impostato con tale autorizzazione. Tutti i file e le cartelle con questi ID di gruppo allegati verranno visualizzati come "Apri all'organizzazione" nella pagina Dettagli analisi. Scopri come https://docs.netapp.com/us-en/bluexp-classification/task-add-group-id-as-open.html["Aggiungere altri ID gruppo come "aperti all'organizzazione""].



== 14 dicembre 2023 (versione 1.26.6)

Questa versione includeva alcuni miglioramenti minori.

Inoltre, la versione ha temporaneamente rimosso le seguenti opzioni:

* L'opzione per attivare la raccolta del registro di controllo è stata disattivata. Fare riferimento a. link:task-manage-file-access-events.html["Monitorare e gestire gli eventi di accesso ai file"].
* Durante l'analisi Directory, l'opzione per calcolare il numero di dati personali identificabili (PII) per directory non è disponibile. Fare riferimento a. link:task-investigate-data.html#filter-data-by-sensitivity-and-content["Esaminare i dati memorizzati nella propria organizzazione"].
* L'opzione per integrare i dati utilizzando le etichette AIP (Azure Information Protection) è stata disattivata. Fare riferimento a. link:task-org-private-data.html["Organizzare i dati privati"].




== 6 novembre 2023 (versione 1.26.3)


