@@ -3573,4 +3573,13 @@ NOTA: La versione di dicembre 2023 (versione 1.26.6) ha temporaneamente rimosso 
   <block id="2238095e02de090e407d911c0f0f1e9f" category="sidebar">Creare criteri per visualizzare i risultati delle ricerche principali</block>
   <block id="3e01ecaa94897c14b8a0c8eb76bf0c93" category="sidebar">Escludere alcune directory dalla scansione</block>
   <block id="c7d804294d8fa0d1ba6bfc80ead25ca0" category="sidebar">Escludere le directory dalla scansione</block>
+  <block id="6505788c29b47651fe2e94f0607a2ef7" category="section-title">Il supporto di istanze di grandi dimensioni è ora qualificato</block>
+  <block id="1647534ed4603d68f73fd3f261af9b65" category="paragraph">Se hai bisogno della classificazione BlueXP per analizzare più di 250 milioni di file, puoi utilizzare un'istanza Extra Large nell'implementazione del cloud o nell'installazione on-premise. Questo tipo di sistema è in grado di eseguire la scansione di un massimo di 500 milioni di file.</block>
+  <block id="1b4f4b549e0860b1392190bfc2a23f81" category="paragraph"><block ref="1eef614f77c6908f78f84cb1847e2ab8" category="inline-link-rx"></block>.</block>
+  <block id="9b751021fe03877034959f96cd4215c8" category="cell">32 CPU, 128 GB di RAM, 1 TiB SSD GP3</block>
+  <block id="208031164ce87fe17cb9a0ed2c215c9d" category="inline-link">m6i.8xlarge</block>
+  <block id="e29d39e8b73232f4d7b95d15d9f1add1" category="cell"><block ref="0285aa638d8bc84a14485422bcb58514" category="inline-link-rx"></block> (impostazione predefinita)</block>
+  <block id="7c6b159592aa05d7d8934685f5b0c4c8" category="cell">32 CPU, 128 GB di RAM, disco OS (2.048 GiB, throughput minimo 250 MB/s) e disco dati (SSD 1 TiB, throughput minimo 750 MB/s)</block>
+  <block id="02201d429f7390acabd29e5c0c6e22e2" category="inline-link">Standard_D32_v3</block>
+  <block id="f15da40a9b4a1b9d1900476ba761ddf8" category="cell"><block ref="98fbfccb7d937f28be2761c9fd869045" category="inline-link-rx"></block> (impostazione predefinita)</block>
 </blocks>
